tp/damv_language_version_anglaise/parser.output
Terminaux inutilisés dans la grammaire

    FSIN


État 27 conflits: 3 décalage/réduction


Grammaire

    0 $accept: Program $end

    1 Program: program_body

    2 program_body: stat
    3             | stat program_body

    4 stat: bloc
    5     | blocSi
    6     | blocWhile
    7     | blocFor
    8     | blocDoWhile

    9 bloc: instr SEMI
   10     | instr SEMI bloc

   11 instr: VARIABLE EQUAL E
   12      | PRINT VARIABLE
   13      | READ VARIABLE
   14      | VARIABLE EQUAL cond

   15 $@1: ε

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP E DO $@1 blocIntFor ENDFOR

   17 blocIntFor: bloc
   18           | blocSi
   19           | blocWhile
   20           | blocFor
   21           | blocFor bloc
   22           | blocSi blocIntFor
   23           | bloc blocIntFor

   24 $@2: ε

   25 blocDoWhile: DO $@2 blocIntDoWhile WHILE exp_bool ENDWHILE

   26 blocIntDoWhile: bloc
   27               | blocSi
   28               | blocFor
   29               | blocWhile
   30               | blocDoWhile

   31 blocWhile: WHILE etiquetWhile exp_bool LOOP blocIntWhile ENDWHILE

   32 blocIntWhile: bloc
   33             | blocSi
   34             | blocSi blocIntWhile
   35             | bloc blocIntWhile

   36 etiquetWhile: ε

   37 LOOP: DO

   38 exp_bool: cond

   39 ENDWHILE: DONE

   40 blocSi: SI cond alo bloc finSi
   41       | SI cond alo bloc sino bloc finSi

   42 finSi: FSI

   43 alo: ALORS

   44 sino: SINON

   45 cond: LPAREN F EQEQ F RPAREN
   46     | LPAREN F NEQ F RPAREN
   47     | LPAREN F LT F RPAREN
   48     | LPAREN F GT F RPAREN

   49 E: T
   50  | E ADD T

   51 T: F
   52  | T MUL F

   53 F: INTEGER
   54  | VARIABLE


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    INTEGER (258) 53
    PRINT (259) 12
    VARIABLE (260) 11 12 13 14 16 54
    SI (261) 40 41
    ALORS (262) 43
    SINON (263) 44
    FSI (264) 42
    FSIN (265)
    READ (266) 13
    WHILE (267) 25 31
    DONE (268) 39
    DO (269) 16 25 37
    FOR (270) 16
    TO (271) 16
    STEP (272) 16
    ENDFOR (273) 16
    ADD (274) 50
    MUL (275) 52
    EQUAL (276) 11 14 16
    SEMI (277) 9 10
    EQEQ (278) 45
    NEQ (279) 46
    LT (280) 47
    GT (281) 48
    LPAREN (282) 45 46 47 48
    RPAREN (283) 45 46 47 48


Non-terminaux, suivis des règles où ils apparaissent

    $accept (29)
        à gauche: 0
    Program (30)
        à gauche: 1
        à droite: 0
    program_body (31)
        à gauche: 2 3
        à droite: 1 3
    stat (32)
        à gauche: 4 5 6 7 8
        à droite: 2 3
    bloc (33)
        à gauche: 9 10
        à droite: 4 10 17 21 23 26 32 35 40 41
    instr (34)
        à gauche: 11 12 13 14
        à droite: 9 10
    blocFor (35)
        à gauche: 16
        à droite: 7 20 21 28
    $@1 (36)
        à gauche: 15
        à droite: 16
    blocIntFor (37)
        à gauche: 17 18 19 20 21 22 23
        à droite: 16 22 23
    blocDoWhile (38)
        à gauche: 25
        à droite: 8 30
    $@2 (39)
        à gauche: 24
        à droite: 25
    blocIntDoWhile (40)
        à gauche: 26 27 28 29 30
        à droite: 25
    blocWhile (41)
        à gauche: 31
        à droite: 6 19 29
    blocIntWhile (42)
        à gauche: 32 33 34 35
        à droite: 31 34 35
    etiquetWhile (43)
        à gauche: 36
        à droite: 31
    LOOP (44)
        à gauche: 37
        à droite: 31
    exp_bool (45)
        à gauche: 38
        à droite: 25 31
    ENDWHILE (46)
        à gauche: 39
        à droite: 25 31
    blocSi (47)
        à gauche: 40 41
        à droite: 5 18 22 27 33 34
    finSi (48)
        à gauche: 42
        à droite: 40 41
    alo (49)
        à gauche: 43
        à droite: 40 41
    sino (50)
        à gauche: 44
        à droite: 41
    cond (51)
        à gauche: 45 46 47 48
        à droite: 14 38 40 41
    E (52)
        à gauche: 49 50
        à droite: 11 16 50
    T (53)
        à gauche: 51 52
        à droite: 49 50 52
    F (54)
        à gauche: 53 54
        à droite: 45 46 47 48 51 52


État 0

    0 $accept: • Program $end

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4
    WHILE     décalage et aller à l'état 5
    DO        décalage et aller à l'état 6
    FOR       décalage et aller à l'état 7

    Program       aller à l'état 8
    program_body  aller à l'état 9
    stat          aller à l'état 10
    bloc          aller à l'état 11
    instr         aller à l'état 12
    blocFor       aller à l'état 13
    blocDoWhile   aller à l'état 14
    blocWhile     aller à l'état 15
    blocSi        aller à l'état 16


État 1

   12 instr: PRINT • VARIABLE

    VARIABLE  décalage et aller à l'état 17


État 2

   11 instr: VARIABLE • EQUAL E
   14      | VARIABLE • EQUAL cond

    EQUAL  décalage et aller à l'état 18


État 3

   40 blocSi: SI • cond alo bloc finSi
   41       | SI • cond alo bloc sino bloc finSi

    LPAREN  décalage et aller à l'état 19

    cond  aller à l'état 20


État 4

   13 instr: READ • VARIABLE

    VARIABLE  décalage et aller à l'état 21


État 5

   31 blocWhile: WHILE • etiquetWhile exp_bool LOOP blocIntWhile ENDWHILE

    $défaut  réduction par utilisation de la règle 36 (etiquetWhile)

    etiquetWhile  aller à l'état 22


État 6

   25 blocDoWhile: DO • $@2 blocIntDoWhile WHILE exp_bool ENDWHILE

    $défaut  réduction par utilisation de la règle 24 ($@2)

    $@2  aller à l'état 23


État 7

   16 blocFor: FOR • VARIABLE EQUAL E TO E STEP E DO $@1 blocIntFor ENDFOR

    VARIABLE  décalage et aller à l'état 24


État 8

    0 $accept: Program • $end

    $end  décalage et aller à l'état 25


État 9

    1 Program: program_body •

    $défaut  réduction par utilisation de la règle 1 (Program)


État 10

    2 program_body: stat •
    3             | stat • program_body

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4
    WHILE     décalage et aller à l'état 5
    DO        décalage et aller à l'état 6
    FOR       décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 2 (program_body)

    program_body  aller à l'état 26
    stat          aller à l'état 10
    bloc          aller à l'état 11
    instr         aller à l'état 12
    blocFor       aller à l'état 13
    blocDoWhile   aller à l'état 14
    blocWhile     aller à l'état 15
    blocSi        aller à l'état 16


État 11

    4 stat: bloc •

    $défaut  réduction par utilisation de la règle 4 (stat)


État 12

    9 bloc: instr • SEMI
   10     | instr • SEMI bloc

    SEMI  décalage et aller à l'état 27


État 13

    7 stat: blocFor •

    $défaut  réduction par utilisation de la règle 7 (stat)


État 14

    8 stat: blocDoWhile •

    $défaut  réduction par utilisation de la règle 8 (stat)


État 15

    6 stat: blocWhile •

    $défaut  réduction par utilisation de la règle 6 (stat)


État 16

    5 stat: blocSi •

    $défaut  réduction par utilisation de la règle 5 (stat)


État 17

   12 instr: PRINT VARIABLE •

    $défaut  réduction par utilisation de la règle 12 (instr)


État 18

   11 instr: VARIABLE EQUAL • E
   14      | VARIABLE EQUAL • cond

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29
    LPAREN    décalage et aller à l'état 19

    cond  aller à l'état 30
    E     aller à l'état 31
    T     aller à l'état 32
    F     aller à l'état 33


État 19

   45 cond: LPAREN • F EQEQ F RPAREN
   46     | LPAREN • F NEQ F RPAREN
   47     | LPAREN • F LT F RPAREN
   48     | LPAREN • F GT F RPAREN

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    F  aller à l'état 34


État 20

   40 blocSi: SI cond • alo bloc finSi
   41       | SI cond • alo bloc sino bloc finSi

    ALORS  décalage et aller à l'état 35

    alo  aller à l'état 36


État 21

   13 instr: READ VARIABLE •

    $défaut  réduction par utilisation de la règle 13 (instr)


État 22

   31 blocWhile: WHILE etiquetWhile • exp_bool LOOP blocIntWhile ENDWHILE

    LPAREN  décalage et aller à l'état 19

    exp_bool  aller à l'état 37
    cond      aller à l'état 38


État 23

   25 blocDoWhile: DO $@2 • blocIntDoWhile WHILE exp_bool ENDWHILE

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4
    WHILE     décalage et aller à l'état 5
    DO        décalage et aller à l'état 6
    FOR       décalage et aller à l'état 7

    bloc            aller à l'état 39
    instr           aller à l'état 12
    blocFor         aller à l'état 40
    blocDoWhile     aller à l'état 41
    blocIntDoWhile  aller à l'état 42
    blocWhile       aller à l'état 43
    blocSi          aller à l'état 44


État 24

   16 blocFor: FOR VARIABLE • EQUAL E TO E STEP E DO $@1 blocIntFor ENDFOR

    EQUAL  décalage et aller à l'état 45


État 25

    0 $accept: Program $end •

    $défaut  accepter


État 26

    3 program_body: stat program_body •

    $défaut  réduction par utilisation de la règle 3 (program_body)


État 27

    9 bloc: instr SEMI •
   10     | instr SEMI • bloc

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    READ      décalage et aller à l'état 4

    PRINT     [réduction par utilisation de la règle 9 (bloc)]
    VARIABLE  [réduction par utilisation de la règle 9 (bloc)]
    READ      [réduction par utilisation de la règle 9 (bloc)]
    $défaut   réduction par utilisation de la règle 9 (bloc)

    bloc   aller à l'état 46
    instr  aller à l'état 12


État 28

   53 F: INTEGER •

    $défaut  réduction par utilisation de la règle 53 (F)


État 29

   54 F: VARIABLE •

    $défaut  réduction par utilisation de la règle 54 (F)


État 30

   14 instr: VARIABLE EQUAL cond •

    $défaut  réduction par utilisation de la règle 14 (instr)


État 31

   11 instr: VARIABLE EQUAL E •
   50 E: E • ADD T

    ADD  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 11 (instr)


État 32

   49 E: T •
   52 T: T • MUL F

    MUL  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 49 (E)


État 33

   51 T: F •

    $défaut  réduction par utilisation de la règle 51 (T)


État 34

   45 cond: LPAREN F • EQEQ F RPAREN
   46     | LPAREN F • NEQ F RPAREN
   47     | LPAREN F • LT F RPAREN
   48     | LPAREN F • GT F RPAREN

    EQEQ  décalage et aller à l'état 49
    NEQ   décalage et aller à l'état 50
    LT    décalage et aller à l'état 51
    GT    décalage et aller à l'état 52


État 35

   43 alo: ALORS •

    $défaut  réduction par utilisation de la règle 43 (alo)


État 36

   40 blocSi: SI cond alo • bloc finSi
   41       | SI cond alo • bloc sino bloc finSi

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    READ      décalage et aller à l'état 4

    bloc   aller à l'état 53
    instr  aller à l'état 12


État 37

   31 blocWhile: WHILE etiquetWhile exp_bool • LOOP blocIntWhile ENDWHILE

    DO  décalage et aller à l'état 54

    LOOP  aller à l'état 55


État 38

   38 exp_bool: cond •

    $défaut  réduction par utilisation de la règle 38 (exp_bool)


État 39

   26 blocIntDoWhile: bloc •

    $défaut  réduction par utilisation de la règle 26 (blocIntDoWhile)


État 40

   28 blocIntDoWhile: blocFor •

    $défaut  réduction par utilisation de la règle 28 (blocIntDoWhile)


État 41

   30 blocIntDoWhile: blocDoWhile •

    $défaut  réduction par utilisation de la règle 30 (blocIntDoWhile)


État 42

   25 blocDoWhile: DO $@2 blocIntDoWhile • WHILE exp_bool ENDWHILE

    WHILE  décalage et aller à l'état 56


État 43

   29 blocIntDoWhile: blocWhile •

    $défaut  réduction par utilisation de la règle 29 (blocIntDoWhile)


État 44

   27 blocIntDoWhile: blocSi •

    $défaut  réduction par utilisation de la règle 27 (blocIntDoWhile)


État 45

   16 blocFor: FOR VARIABLE EQUAL • E TO E STEP E DO $@1 blocIntFor ENDFOR

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    E  aller à l'état 57
    T  aller à l'état 32
    F  aller à l'état 33


État 46

   10 bloc: instr SEMI bloc •

    $défaut  réduction par utilisation de la règle 10 (bloc)


État 47

   50 E: E ADD • T

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    T  aller à l'état 58
    F  aller à l'état 33


État 48

   52 T: T MUL • F

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    F  aller à l'état 59


État 49

   45 cond: LPAREN F EQEQ • F RPAREN

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    F  aller à l'état 60


État 50

   46 cond: LPAREN F NEQ • F RPAREN

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    F  aller à l'état 61


État 51

   47 cond: LPAREN F LT • F RPAREN

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    F  aller à l'état 62


État 52

   48 cond: LPAREN F GT • F RPAREN

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    F  aller à l'état 63


État 53

   40 blocSi: SI cond alo bloc • finSi
   41       | SI cond alo bloc • sino bloc finSi

    SINON  décalage et aller à l'état 64
    FSI    décalage et aller à l'état 65

    finSi  aller à l'état 66
    sino   aller à l'état 67


État 54

   37 LOOP: DO •

    $défaut  réduction par utilisation de la règle 37 (LOOP)


État 55

   31 blocWhile: WHILE etiquetWhile exp_bool LOOP • blocIntWhile ENDWHILE

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4

    bloc          aller à l'état 68
    instr         aller à l'état 12
    blocIntWhile  aller à l'état 69
    blocSi        aller à l'état 70


État 56

   25 blocDoWhile: DO $@2 blocIntDoWhile WHILE • exp_bool ENDWHILE

    LPAREN  décalage et aller à l'état 19

    exp_bool  aller à l'état 71
    cond      aller à l'état 38


État 57

   16 blocFor: FOR VARIABLE EQUAL E • TO E STEP E DO $@1 blocIntFor ENDFOR
   50 E: E • ADD T

    TO   décalage et aller à l'état 72
    ADD  décalage et aller à l'état 47


État 58

   50 E: E ADD T •
   52 T: T • MUL F

    MUL  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 50 (E)


État 59

   52 T: T MUL F •

    $défaut  réduction par utilisation de la règle 52 (T)


État 60

   45 cond: LPAREN F EQEQ F • RPAREN

    RPAREN  décalage et aller à l'état 73


État 61

   46 cond: LPAREN F NEQ F • RPAREN

    RPAREN  décalage et aller à l'état 74


État 62

   47 cond: LPAREN F LT F • RPAREN

    RPAREN  décalage et aller à l'état 75


État 63

   48 cond: LPAREN F GT F • RPAREN

    RPAREN  décalage et aller à l'état 76


État 64

   44 sino: SINON •

    $défaut  réduction par utilisation de la règle 44 (sino)


État 65

   42 finSi: FSI •

    $défaut  réduction par utilisation de la règle 42 (finSi)


État 66

   40 blocSi: SI cond alo bloc finSi •

    $défaut  réduction par utilisation de la règle 40 (blocSi)


État 67

   41 blocSi: SI cond alo bloc sino • bloc finSi

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    READ      décalage et aller à l'état 4

    bloc   aller à l'état 77
    instr  aller à l'état 12


État 68

   32 blocIntWhile: bloc •
   35             | bloc • blocIntWhile

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 32 (blocIntWhile)

    bloc          aller à l'état 68
    instr         aller à l'état 12
    blocIntWhile  aller à l'état 78
    blocSi        aller à l'état 70


État 69

   31 blocWhile: WHILE etiquetWhile exp_bool LOOP blocIntWhile • ENDWHILE

    DONE  décalage et aller à l'état 79

    ENDWHILE  aller à l'état 80


État 70

   33 blocIntWhile: blocSi •
   34             | blocSi • blocIntWhile

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 33 (blocIntWhile)

    bloc          aller à l'état 68
    instr         aller à l'état 12
    blocIntWhile  aller à l'état 81
    blocSi        aller à l'état 70


État 71

   25 blocDoWhile: DO $@2 blocIntDoWhile WHILE exp_bool • ENDWHILE

    DONE  décalage et aller à l'état 79

    ENDWHILE  aller à l'état 82


État 72

   16 blocFor: FOR VARIABLE EQUAL E TO • E STEP E DO $@1 blocIntFor ENDFOR

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    E  aller à l'état 83
    T  aller à l'état 32
    F  aller à l'état 33


État 73

   45 cond: LPAREN F EQEQ F RPAREN •

    $défaut  réduction par utilisation de la règle 45 (cond)


État 74

   46 cond: LPAREN F NEQ F RPAREN •

    $défaut  réduction par utilisation de la règle 46 (cond)


État 75

   47 cond: LPAREN F LT F RPAREN •

    $défaut  réduction par utilisation de la règle 47 (cond)


État 76

   48 cond: LPAREN F GT F RPAREN •

    $défaut  réduction par utilisation de la règle 48 (cond)


État 77

   41 blocSi: SI cond alo bloc sino bloc • finSi

    FSI  décalage et aller à l'état 65

    finSi  aller à l'état 84


État 78

   35 blocIntWhile: bloc blocIntWhile •

    $défaut  réduction par utilisation de la règle 35 (blocIntWhile)


État 79

   39 ENDWHILE: DONE •

    $défaut  réduction par utilisation de la règle 39 (ENDWHILE)


État 80

   31 blocWhile: WHILE etiquetWhile exp_bool LOOP blocIntWhile ENDWHILE •

    $défaut  réduction par utilisation de la règle 31 (blocWhile)


État 81

   34 blocIntWhile: blocSi blocIntWhile •

    $défaut  réduction par utilisation de la règle 34 (blocIntWhile)


État 82

   25 blocDoWhile: DO $@2 blocIntDoWhile WHILE exp_bool ENDWHILE •

    $défaut  réduction par utilisation de la règle 25 (blocDoWhile)


État 83

   16 blocFor: FOR VARIABLE EQUAL E TO E • STEP E DO $@1 blocIntFor ENDFOR
   50 E: E • ADD T

    STEP  décalage et aller à l'état 85
    ADD   décalage et aller à l'état 47


État 84

   41 blocSi: SI cond alo bloc sino bloc finSi •

    $défaut  réduction par utilisation de la règle 41 (blocSi)


État 85

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP • E DO $@1 blocIntFor ENDFOR

    INTEGER   décalage et aller à l'état 28
    VARIABLE  décalage et aller à l'état 29

    E  aller à l'état 86
    T  aller à l'état 32
    F  aller à l'état 33


État 86

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP E • DO $@1 blocIntFor ENDFOR
   50 E: E • ADD T

    DO   décalage et aller à l'état 87
    ADD  décalage et aller à l'état 47


État 87

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP E DO • $@1 blocIntFor ENDFOR

    $défaut  réduction par utilisation de la règle 15 ($@1)

    $@1  aller à l'état 88


État 88

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP E DO $@1 • blocIntFor ENDFOR

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4
    WHILE     décalage et aller à l'état 5
    FOR       décalage et aller à l'état 7

    bloc        aller à l'état 89
    instr       aller à l'état 12
    blocFor     aller à l'état 90
    blocIntFor  aller à l'état 91
    blocWhile   aller à l'état 92
    blocSi      aller à l'état 93


État 89

   17 blocIntFor: bloc •
   23           | bloc • blocIntFor

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4
    WHILE     décalage et aller à l'état 5
    FOR       décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 17 (blocIntFor)

    bloc        aller à l'état 89
    instr       aller à l'état 12
    blocFor     aller à l'état 90
    blocIntFor  aller à l'état 94
    blocWhile   aller à l'état 92
    blocSi      aller à l'état 93


État 90

   20 blocIntFor: blocFor •
   21           | blocFor • bloc

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    READ      décalage et aller à l'état 4

    $défaut  réduction par utilisation de la règle 20 (blocIntFor)

    bloc   aller à l'état 95
    instr  aller à l'état 12


État 91

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP E DO $@1 blocIntFor • ENDFOR

    ENDFOR  décalage et aller à l'état 96


État 92

   19 blocIntFor: blocWhile •

    $défaut  réduction par utilisation de la règle 19 (blocIntFor)


État 93

   18 blocIntFor: blocSi •
   22           | blocSi • blocIntFor

    PRINT     décalage et aller à l'état 1
    VARIABLE  décalage et aller à l'état 2
    SI        décalage et aller à l'état 3
    READ      décalage et aller à l'état 4
    WHILE     décalage et aller à l'état 5
    FOR       décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 18 (blocIntFor)

    bloc        aller à l'état 89
    instr       aller à l'état 12
    blocFor     aller à l'état 90
    blocIntFor  aller à l'état 97
    blocWhile   aller à l'état 92
    blocSi      aller à l'état 93


État 94

   23 blocIntFor: bloc blocIntFor •

    $défaut  réduction par utilisation de la règle 23 (blocIntFor)


État 95

   21 blocIntFor: blocFor bloc •

    $défaut  réduction par utilisation de la règle 21 (blocIntFor)


État 96

   16 blocFor: FOR VARIABLE EQUAL E TO E STEP E DO $@1 blocIntFor ENDFOR •

    $défaut  réduction par utilisation de la règle 16 (blocFor)


État 97

   22 blocIntFor: blocSi blocIntFor •

    $défaut  réduction par utilisation de la règle 22 (blocIntFor)
